--- a/​.github/workflows/meu_apk.yml
+++ b/​.github/workflows/meu_apk.yml
@@ -20,7 +20,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload do APK Pronto
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # <<--- ESTE É O CONSERTO!
         with:
           name: MeuApp-NFC
           path: app/build/outputs/apk/debug/app-debug.apk
